...
                    android:textColor="@color/black"
                    android:layout_below="@+id/text_titulo_details"
                    android:padding="@dimen/padding_teen"/>


                <TextView
                    android:id="@+id/text_send_details_creator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:visibility="visible"
                    android:textColor="@color/red"
                    android:layout_below="@+id/text_description_details"
...
                    android:layout_weight="4"/>
            </LinearLayout>


                <include android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/recycler_view_user_post"
                    layout="@layout/recycle_view_main"
                    android:layout_marginBottom="@dimen/margin_bottom_scroll"/>
            </LinearLayout>
        </ScrollView>

    <FrameLayout
...
