<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:orientation="vertical">

    <include android:id="@+id/recyclerViewPost"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        layout="@layout/recycle_view_main"/>

</LinearLayout>