<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/main_activity_swipe_to_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include android:id="@+id/recyclerView"
            layout="@layout/recycle_view_main"/>

    </android.support.v4.widget.SwipeRefreshLayout>

</LinearLayout>